--- a/scripts/Workbook1.ipynb
+++ b/scripts/Workbook1.ipynb
@@ -143,31 +143,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "9bb4a076",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "21.36"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 1000 electrons, required VtpF DAC is 306.80 for VtpC DAC 100\n",
+      "Expected threshold from HeAl fit is 1678.12 THL\n"
+     ]
     }
    ],
    "source": [
     "#Compute Test pulse amplitude for required number of electrons\n",
     "\n",
     "Ne = 200\n",
+    "Ne = 1000\n",
     "vtp_V_req = Ne*e/c #in Volts\n",
     "vtpF_step = 0.5e-3 #Step of vtpF DAC #! This is 0.5 mV as per our observation\n",
     "vtpF_abs = vtp_V_req/vtpF_step\n",
     "vtpC = 100 #! Change this as per DAC setting\n",
     "vtpF = vtpF_abs + vtpC*2\n",
-    "print('For %d electrons, required VtpF DAC is %.2f'%(Ne, vtpF))"
+    "print('For %d electrons, required VtpF DAC is %.2f for VtpC DAC %d'%(Ne, vtpF, vtpC))\n",
+    "print('Expected threshold from HeAl fit is %.2f THL'%(linear_mod(Ne, *popt)))"
    ]
   }
  ],
