--- a/scripts/Workbook1.ipynb
+++ b/scripts/Workbook1.ipynb
@@ -169,6 +169,56 @@
     "print('For %d electrons, required VtpF DAC is %.2f for VtpC DAC %d'%(Ne, vtpF, vtpC))\n",
     "print('Expected threshold from HeAl fit is %.2f THL'%(linear_mod(Ne, *popt)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "54da222c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For TOT calibration from 200 to 4000 electrons, VtpF DAC range is 221.36 to 627.20 for VtpC DAC 100\n",
+      "Expected threshold from HeAl fit is 1367.49 to 2842.96 THL\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Estimate VtpF ranges for TOT calibration\n",
+    "vtpC = 100\n",
+    "Ne_min = 200\n",
+    "Ne_max = 4000\n",
+    "vtpF_step = 0.5e-3 #Step of vtpF\n",
+    "vtp_min = Ne_min*e/c #in Volts\n",
+    "vtp_max = Ne_max*e/c #in Volts\n",
+    "vtpF_min = vtp_min/vtpF_step + vtpC*2\n",
+    "vtpF_max = vtp_max/vtpF_step + vtpC*2\n",
+    "print('For TOT calibration from %d to %d electrons, VtpF DAC range is %.2f to %.2f for VtpC DAC %d'%(Ne_min, Ne_max, vtpF_min, vtpF_max, vtpC))\n",
+    "print('Expected threshold from HeAl fit is %.2f to %.2f THL'%(linear_mod(Ne_min, *popt), linear_mod(Ne_max, *popt)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "57bb7090",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For THL = 1343, estimated number of electrons is 136.92 e-\n"
+     ]
+    }
+   ],
+   "source": [
+    "#THL to electrons conversion using HeAl fit\n",
+    "thl = 1343\n",
+    "ne_est = (thl - popt[0])/popt[1]\n",
+    "print('For THL = %d, estimated number of electrons is %.2f e-'%(thl, ne_est))"
+   ]
   }
  ],
  "metadata": {
