A test for CI, no functioanlity changes

--- a/scripts/Workbook1.ipynb
+++ b/scripts/Workbook1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "d9d96242",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "43a7c5fa",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "2285cad4",
    "metadata": {},
    "outputs": [
@@ -49,10 +49,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x70f432199590>"
+       "<matplotlib.legend.Legend at 0x70f4320b79d0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "28a9c6f8",
    "metadata": {},
    "outputs": [
@@ -103,10 +103,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x70f43222e710>"
+       "<matplotlib.legend.Legend at 0x70f432174a50>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "9bb4a076",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "54da222c",
    "metadata": {},
    "outputs": [
@@ -217,11 +217,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2356107621.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint('For %d electrons, estimated THL is %.2f THL'%(Ne,, thl_est))\u001b[39m\n                                                            ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For THL = 1343, estimated number of electrons is 136.92 e-\n",
+      "For 137 electrons, estimated THL is 1343.03 THL\n"
      ]
     }
    ],
@@ -232,9 +232,12 @@
     "print('For THL = %d, estimated number of electrons is %.2f e-'%(thl, ne_est))\n",
     "\n",
     "#electron to THL conversion using AlHe fit\n",
-    "Ne = 300\n",
+    "Ne = 137\n",
     "thl_est = linear_mod(Ne, *popt)\n",
-    "print('For %d electrons, estimated THL is %.2f THL'%(Ne, thl_est))"
+    "print('For %d electrons, estimated THL is %.2f THL'%(Ne, thl_est))\n",
+    "\n",
+    "#Just a test for CI\n",
+    "print('Test for CI')"
    ]
   }
  ],
