--- a/scripts/Workbook1.ipynb
+++ b/scripts/Workbook1.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "57bb7090",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
    "source": [
     "#THL to electrons conversion using AlHe fit\n",
     "thl = 1343\n",
-    "ne_est = (thl - popt[0])/popt[1]\n",
+    "ne_est = (thl - poptAH[0])/poptAH[1]\n",
     "print('For THL = %d, estimated number of electrons is %.2f e-'%(thl, ne_est))\n",
     "\n",
     "#electron to THL conversion using AlHe fit\n",
@@ -309,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hmv01",
+   "display_name": "hypex2",
    "language": "python",
    "name": "python3"
   },
@@ -323,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
